# sparse_file

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.yml  quality.yml  release.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/sparse_file/: __init__.py  sparse_nix.py  sparse_win.py
src/sparsefile/: __init__.py  sparse_nix.py  sparse_win.py
tests/: test_sparse_file.py  test_sparsefile.py
