[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sparsefile"
authors = [
  { name="Michael Wilmes", email="michael.wilmes@gmail.com" },
]
keywords = ["file", "sparse"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 2 - Pre-Alpha",
]
dynamic = ["version", "description"]

[project.urls]
"Homepage" = "https://github.com/wilminator/sparsefile"
"Bug Tracker" = "https://github.com/wilminator/sparsefile/issues"