[tool.poetry]
name = "sparse-file"
version = "0.0.1"
description = "Python package for creating and managing sparse files."
authors = ["Michael Wilmes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sparse-file"
authors = [
  { name="Michael Wilmes", email="michael.wilmes@gmail.com" },
]
keywords = ["file", "sparse"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 2 - Pre-Alpha",
]
dynamic = ["version", "description"]

[project.urls]
"Homepage" = "https://github.com/wilminator/sparse_file"
"Bug Tracker" = "https://github.com/wilminator/sparse_file/issues"